--- a/RecipesProject/package.json
+++ b/RecipesProject/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@ngrx/store": "^9.1.0",
     "bootstrap": "^3.4.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
